--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                  
                    
                     <div class="row  ">
-                        <div id="questionbox" class="col-sm-11 col-11 border text-white   bg-transparent">
+                        <div id="questionbox" class="col-sm-11 col-11 border text-white">
                           Q20. The Op-Amp in the Fig below is ideal. Find the output when Vi = (1-exp(−αt)) u(t). Assume the capacitor to be uncharged when the input is applied and −α = 1/CR1. [u(t)is the unit step function.]
                           V0 will be equal to 
 
@@ -122,7 +122,7 @@
                                         <div id="btn"  class="col-sm-10    bg-transparent">
                                            <div   class="text-center">
                                               <!-- Button trigger modal -->
-                                                <button type="button" id="btn" class="button btn-info" data-toggle="modal" data-target="#exampleModal">
+                                                <button type="button" id="btn" class="button" data-toggle="modal" data-target="#exampleModal">
                                                   SUBMIT
                                                 </button>
 
@@ -131,12 +131,12 @@
                                                   <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
                                                       <div class="modal-header">
-                                                        <h5 class="modal-title" id="exampleModalLabel">Submit</h5>
+                                                        <h5 class="modal-title" id="exampleModalLabel" style="color:black;">Submit</h5>
                                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                           <span aria-hidden="true">&times;</span>
                                                         </button>
                                                       </div>
-                                                      <div class="modal-body">
+                                                      <div class="modal-body" style="color:black;">
                                                         Do you really want to submit ?
                                                       </div>
                                                       <div class="modal-footer">
@@ -165,84 +165,84 @@
                       <div class="row ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="5" class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 1</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="6" class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 2</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1"tabindex="7"  class="col-sm-10 border ">
                               <a class="questionnumber" href="#">Question 3</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="8"  class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 4</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="9"  class="col-sm-10 border ">
                               <a class="questionnumber" href="#">Question 5</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="10" class="col-sm-10 border ">
                                <a class="questionnumber" href="#">Question 6</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="11" class="col-sm-10 border ">
                                <a class="questionnumber" href="#">Question 7</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="12" class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 8</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="13" class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 9</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="14" class="col-sm-10 border ">
                                <a class="questionnumber" href="#"> Question 10</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="15" class="col-sm-10 border ">
                                <a class="questionnumber" href="#">Question 11</a>
                            </div>
                        </div>
                        <div class="row  ">
                            <div class="offset-sm-1">
                            </div>
-                           <div id="q1"  class="col-sm-10 border   bg-transparent">
+                           <div id="q1" tabindex="16" class="col-sm-10 border">
                                <a class="questionnumber" href="#">Question 12</a>
                            </div>
                        </div>
