--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
   <nav id="navbar" class="navbar navbar-expand-sm navbar-light    ">
-    <img id="credenzlogo" src="credenz.png" class="border" alt="">
+    <img id="credenzlogo" src="credenz.png"  alt="">
   	<span class="clock"></span>
   
   
@@ -68,7 +68,7 @@
                  
                    
                     <div class="row  ">
-                        <div id="questionbox" class="col-sm-11 col-11 border text-white">
+                        <div id="questionbox" class="col-sm-11 col-10 border text-white">
                           Q20. The Op-Amp in the Fig below is ideal. Find the output when Vi = (1-exp(−αt)) u(t). Assume the capacitor to be uncharged when the input is applied and −α = 1/CR1. [u(t)is the unit step function.]
                           V0 will be equal to 
 
