recent_latest_final_commit

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   </head>
   <body>
   <nav id="navbar" class="navbar navbar-expand-sm navbar-light    ">
-    <img id="credenzlogo" src="logo pisb_2.png" style=" width: 115px;
-  height: 40px;"  alt="">
+    <img id="credenzlogo" src="logo pisb_2.png"   alt="">
   	<span class="clock"></span>
   
   
