recent_latest_commit

--- a/rules.html
+++ b/rules.html
@@ -16,13 +16,16 @@
 
   <body>
 
-    <nav class="navbar navbar-expand navbar-light" style="background-color:  rgba(0,0,0,0.8);">
+    <nav class="navbar navbar-expand-sm navbar-light" style="background-color:  rgba(0,0,0,0.7);">
 
-      <div class="hide">
-          <img src="logo pisb_2.png"  alt="LOGO">
+      <div >
+          <img id="cretronixlogo"  src="cretronix final.png"  alt="LOGO">
       </div>
       <div class="bar ">
-        <a class="navbar-brand text-white " href="#"> Instruction Page </a>
+        <a class="navbar-brand text-white " href="#"> Cretronix </a>
+      </div>
+      <div >
+          <img id="pisblogo" src="logo pisb_2.png"  alt="LOGO">
       </div>
      
 
@@ -34,7 +37,7 @@
           <div  class="card-body  ">
             <h3 class="card-title text-center">Instructions</h3>
             <ul>
-              <li>Follow the style guide , Every programming language has a style guide that tells you in great detail how to indent your code, where to put spaces and braces.</li>
+              <li  >Follow the style guide , Every programming language has a style guide that tells you in great detail how to indent your code, where to put spaces and braces.</li>
               <p> </p>
               <li>Follow the style guide , Every programming language has a style guide that tells you in great detail how to indent your code, where to put spaces and braces. </li>
               <p> </p>
@@ -58,17 +61,17 @@
       
     </div>
     <div class="row  ">
-  	    <div   class="col-sm-12 text-center   bg-transparent">
-  		    <button id="btn" type="button" >
-             SUBMIT
+        <div   class="col-sm-12 text-center   bg-transparent">
+          <button id="btn" type="button" >
+             PROCEED
             </button>
 
-  	    </div>
+        </div>
     </div>
   </div>
 
     <footer class=" fixed-bottom ">
-      <div class="container-fluid text-center pt-2 pb-2 ftt">Copyright &copy PICT IEEE Student Branch | Developed with &#x2764 by PISB <a class="abt" href="abs.html">Web Team</a></div>
+      <div class="container-fluid text-center pt-3 pb-2 ftt">&copy PICT IEEE Student Branch | Developed by PISB <a class="abt" href="wt.html">Web Team</a></div>
    </footer>
   </body>
 
